--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_color">#13213b</color>
+    <color name="button_color">#778bd9</color>
+    <color name="yellow_color">#ccc140</color>
+    <color name="sky_blue_color">#D8EDF5</color>
+    <color name="dark_color">#444444</color>
+    <color name="main_white_color">#F0F6F7</color>
+    <color name="gray_color">#A5A5A5</color>
 </resources>
