--- a/app/src/main/res/layout/behavior_movie_detail.xml
+++ b/app/src/main/res/layout/behavior_movie_detail.xml
@@ -12,7 +12,7 @@
         android:id="@+id/view_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/bg_main_color_top_round"
+        android:background="@drawable/bg_gradient2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
