--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,94 +8,29 @@
     android:background="@color/main_color"
     tools:context=".MainActivity">
 
-    <View
-        android:id="@+id/viewMenu"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
-        android:background="@drawable/ic_round_menu_24"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <View
-        android:id="@+id/viewSearch"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/ic_baseline_search_24"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <ScrollView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/viewSearch"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:menu="@menu/bottom_nav_menu" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/txtTrending"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:text="@string/trending"
-                android:textColor="@color/main_white_color"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/binggrae_bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/vpTrending"
-                android:layout_width="0dp"
-                android:layout_height="370dp"
-                android:paddingStart="20dp"
-                android:layout_marginTop="20dp"
-                android:paddingEnd="85dp"
-                android:clipChildren="false"
-                android:clipToPadding="false"
-                app:layout_constraintTop_toBottomOf="@id/txtTrending"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <TextView
-                android:id="@+id/txtGenre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:text="@string/genre_recommendation"
-                android:textColor="@color/main_white_color"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/vpTrending"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/vpGenre"
-                android:layout_width="0dp"
-                android:layout_height="370dp"
-                android:paddingStart="20dp"
-                android:layout_marginTop="20dp"
-                android:paddingEnd="85dp"
-                android:clipChildren="false"
-                android:clipToPadding="false"
-                app:layout_constraintTop_toBottomOf="@id/txtGenre"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
-
-
+    <fragment
+        android:id="@+id/navHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/navView"
+        app:navGraph="@navigation/my_navigation"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
