--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bg_gradient2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MovieDetailActivity">
@@ -13,7 +14,9 @@
         android:layout_height="320dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:src="@drawable/test_image"
+        tools:scaleType="centerCrop"/>
 
     <View
         android:id="@+id/viewContent"
@@ -25,16 +28,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="200dp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:textColor="@color/main_white_color"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/binggrae_bold"
+        android:marqueeRepeatLimit="marquee_forever"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="John Wick: Chapter 3"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGenre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="270dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="@id/viewContent"
+        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintStart_toStartOf="parent"
         tools:itemCount="3"
         tools:listitem="@layout/cell_genre"/>
 
@@ -43,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@color/yellow_color"
+        android:textColor="@color/dark_yellow_color"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/rvGenre"
@@ -51,29 +73,31 @@
         app:layout_constraintBottom_toBottomOf="@id/rvGenre"
         tools:text="8.1"/>
 
-    <TextView
-        android:id="@+id/txtTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
+    <View
+        android:id="@+id/viewHeart"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="20dp"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:textColor="@color/main_white_color"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:marqueeRepeatLimit="marquee_forever"
-        app:layout_constraintTop_toBottomOf="@id/rvGenre"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="John Wick: Chapter 3"/>
+        android:background="@drawable/ic_heart_fill_24"
+        app:layout_constraintTop_toTopOf="@id/rvGenre"
+        app:layout_constraintBottom_toBottomOf="@id/rvGenre"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/viewBookMark"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/ic_bookmark_fill_24"
+        app:layout_constraintTop_toTopOf="@id/viewHeart"
+        app:layout_constraintBottom_toBottomOf="@id/viewHeart"
+        app:layout_constraintEnd_toStartOf="@id/viewHeart"/>
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        app:layout_constraintTop_toBottomOf="@id/rvGenre"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -92,6 +116,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/main_white_color"
                 android:textStyle="bold"
+                android:fontFamily="@font/binggrae_bold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -117,6 +142,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/main_white_color"
                 android:textStyle="bold"
+                android:fontFamily="@font/binggrae_bold"
                 app:layout_constraintStart_toStartOf="@id/txtStory"
                 app:layout_constraintTop_toBottomOf="@id/txtStory"/>
 
