--- a/app/src/main/res/layout/behavior_movie_detail.xml
+++ b/app/src/main/res/layout/behavior_movie_detail.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@color/yellow_color"
+        android:textColor="@color/dark_yellow_color"
         android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/rv_genre"
