--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,9 @@
 
     <color name="main_color">#13213b</color>
     <color name="button_color">#778bd9</color>
-    <color name="yellow_color">#ccc140</color>
+    <color name="yellow_color">#FFD428</color>
+    <color name="dark_yellow_color">#ccc140</color>
+    <color name="pink">#FF518C</color>
     <color name="sky_blue_color">#D8EDF5</color>
     <color name="dark_color">#444444</color>
     <color name="main_white_color">#F0F6F7</color>
