--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/bg_gradient2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailActivity">
+    tools:context=".presentation.movie_detail.MovieDetailActivity">
 
     <ImageView
         android:id="@+id/imgBackgtround"
