--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".MyPageFragment">
+    tools:context=".presentation.mypage.MyPageFragment">
 
     <TextView
         android:layout_width="wrap_content"
