--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_color"
-    tools:context=".SearchFragment">
+    tools:context=".presentation.search.SearchFragment">
 
     <TextView
         android:layout_width="wrap_content"
