--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
             android:layout_marginStart="20dp"
             android:text="@string/trending"
             android:textColor="@color/main_white_color"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:fontFamily="@font/binggrae_bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +54,46 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
+            android:id="@+id/txtMovieTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/main_white_color"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/binggrae_bold"
+            app:layout_constraintTop_toBottomOf="@id/vpTrending"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="영화 제목"/>
+
+        <TextView
+            android:id="@+id/txtRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="20dp"
+            android:textColor="@color/teal_200"
+            app:layout_constraintTop_toBottomOf="@id/txtMovieTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="7.5"/>
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:stepSize="0.01"
+            android:isIndicator="false"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            app:layout_constraintStart_toEndOf="@id/txtRating"
+            app:layout_constraintTop_toTopOf="@id/txtRating"
+            app:layout_constraintBottom_toBottomOf="@id/txtRating"
+            tools:rating="3"/>
+
+        <TextView
             android:id="@+id/txtGenre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,9 +101,10 @@
             android:layout_marginStart="20dp"
             android:text="@string/genre_recommendation"
             android:textColor="@color/main_white_color"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/vpTrending"
+            android:fontFamily="@font/binggrae_bold"
+            app:layout_constraintTop_toBottomOf="@id/ratingBar"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <androidx.viewpager2.widget.ViewPager2
