--- a/app/src/main/res/layout/cell_trending.xml
+++ b/app/src/main/res/layout/cell_trending.xml
@@ -11,6 +11,6 @@
         android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:background="@color/black"/>
+        tools:background="@drawable/test_image"/>
 
 </androidx.cardview.widget.CardView>
