--- a/app/src/main/res/layout/cell_like_movie.xml
+++ b/app/src/main/res/layout/cell_like_movie.xml
@@ -35,9 +35,11 @@
             android:id="@+id/txtMovieTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:paddingTop="10dp"
             android:layout_marginHorizontal="15dp"
             android:fontFamily="@font/binggrae_bold"
+            android:textColor="@color/main_color"
             android:textStyle="bold"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +55,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/binggrae_bold"
             android:textStyle="bold"
+            android:textColor="@color/teal_200"
             android:textSize="18sp"
             android:text="@string/my_average"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
