--- a/app/src/main/res/layout/dialog_like_movie.xml
+++ b/app/src/main/res/layout/dialog_like_movie.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@color/white"
     app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/txtTitle"
@@ -28,16 +28,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <RatingBar
+<!--        <RatingBar-->
+<!--            android:id="@+id/ratingBar"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginHorizontal="20dp"-->
+<!--            android:stepSize="0.01"-->
+<!--            style="@style/Widget.AppCompat.RatingBar"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/txtTitle"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            tools:rating="3"/>-->
+
+        <com.willy.ratingbar.RotationRatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:stepSize="0.01"
+            android:layout_marginHorizontal="40dp"
+            app:srb_numStars="5"
+            app:srb_minimumStars="0"
+            app:srb_stepSize="0.1"
+            app:srb_isIndicator="false"
+            app:srb_clickable="true"
+            app:srb_scrollable="true"
+            app:srb_clearRatingEnabled="true"
             app:layout_constraintTop_toBottomOf="@id/txtTitle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:rating="3"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/txtRating"
@@ -46,33 +65,60 @@
             android:layout_marginTop="8dp"
             android:textStyle="bold"
             android:textSize="25sp"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/yellow_color"
             android:fontFamily="@font/binggrae_bold"
             app:layout_constraintTop_toBottomOf="@id/ratingBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="5.5"/>
 
-        <EditText
-            android:id="@+id/editMemo"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/editMemoLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:hint="@string/memo_guide"
-            android:paddingHorizontal="10dp"
-            android:fontFamily="@font/binggrae"
-            android:inputType="textMultiLine"
             app:layout_constraintTop_toBottomOf="@id/txtRating"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editMemo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLength="100"
+                android:hint="@string/memo_guide"
+                android:paddingHorizontal="10dp"
+                android:fontFamily="@font/binggrae"
+                android:inputType="textMultiLine"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
 
         <TextView
-                android:id="@+id/btnOk"
+            android:id="@+id/btnCancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@color/gray_color"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/cancel"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:fontFamily="@font/binggrae_bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnOk"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editMemoLayout" />
+
+        <TextView
+            android:id="@+id/btnOk"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:background="@color/button_color"
             android:gravity="center"
             android:padding="10dp"
@@ -81,9 +127,9 @@
             android:textSize="20sp"
             android:fontFamily="@font/binggrae_bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btnCancel"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editMemo" />
+            app:layout_constraintTop_toTopOf="@id/btnCancel" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
