--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp">
 
         <TextView
             android:id="@+id/txtTitle"
@@ -73,7 +74,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvBookmark"
             android:layout_width="0dp"
-            android:layout_height="370dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
@@ -82,9 +83,10 @@
             app:layout_constraintTop_toBottomOf="@id/txtBookmark"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/cell_similar"
-            tools:itemCount="3"/>
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            tools:listitem="@layout/cell_bookmark"
+            tools:itemCount="7"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
